# Peer-to-Peer-Systems

./: .clang-uml  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  README.me  conanfile.txt  config.json  connection.cpp  connection.hpp  connections.cpp  connections.hpp  connector.cpp  connector.hpp  dht.hpp  fingerTable.hpp  fingertable.hpp  hash.cpp  hash.hpp  hashing.cpp  hashing.hpp  iointerface.cpp  iointerface.hpp  listener.cpp  listener.hpp  main.cpp  message.cpp  message.hpp  myConnectionHandler.cpp  myConnectionHandler.hpp  mySocketAcceptor.cpp  mySocketAcceptor.hpp  mySocketConnector.cpp  mySocketConnector.hpp  peer.cpp  peer.hpp  peerConfig.cpp  peerConfig.hpp  peerConfig.json  primeCalculation.cpp  (+11 more)
sectorHandling/: primeCalculation.cpp  primeCalculation.hpp  resultHandler.cpp  resultHandler.hpp  sectorHandler.cpp  sectorHandler.hpp
src/: CMakeLists.txt  fingerTable.cpp  fingerTable.hpp  globalDefinitions.hpp  hash.cpp  hash.hpp  main.cpp  peer.cpp  peer.hpp  resultHandler.cpp  resultHandler.hpp  resultStorage.cpp  resultStorage.hpp  task.cpp  task.hpp  taskManager.cpp  taskManager.hpp  timing.cpp  timing.hpp
src/networking/: acceptor.cpp  acceptor.hpp  connection.cpp  connection.hpp  connectionManager.cpp  connectionManager.hpp  connector.cpp  connector.hpp  message.cpp  message.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  runTests[1]_include.cmake  send_receive.cpp  test.cpp  tests.cpp
